--- a/login.html
+++ b/login.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>welcome login </h1>
+    <label>User Name</label>
+    <input type="text" placeholder="enter user name">
 </body>
 </html>
